--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -31,6 +31,7 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+.Bus Ticketing Functional Requirements
 
 # Installer logs
 pip-log.txt
